# ImageService

./: .gitignore
protos/: imageService.proto
src/: CMakeLists.txt  StopWatch.cpp  client.cpp  client_async.cpp  service.cpp  service_async.cpp
